--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "[5 rows x 188 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -353,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_42844\\1828497962.py:4: FutureWarning: \n",
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_42624\\1828497962.py:4: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "Text(0.5, 1.0, 'Percentage of each class in train data')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
    "source": [
     "combined_smote = np.concatenate((X_train_smote, y_train_smote.reshape(-1, 1)), axis=1)\n",
     "combined_smote_df = pd.DataFrame(combined_smote)\n",
-    "combined_smote_df.to_csv('augmented_data/smote_dataset.csv')\n",
+    "combined_smote_df.to_csv('augmented_data/smote_dataset.csv', header= False, index = False)\n",
     "\n",
     "# Free memory\n",
     "del combined_smote\n",
@@ -511,14 +511,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_42844\\2509750027.py:2: FutureWarning: \n",
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_42624\\2509750027.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -555,14 +555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_42844\\703741725.py:7: FutureWarning: \n",
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_42624\\703741725.py:7: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "Text(0.5, 1.0, 'Percentage of each class in resampled train data')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "array([0., 0., 0., ..., 4., 4., 4.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -739,10 +739,10 @@
     {
      "data": {
       "text/plain": [
-       "10871"
+       "7828"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +863,7 @@
     "combined_st = pd.concat([train_data_majority, combined_minority_df]) # Combine \n",
     "\n",
     "# Convert to csv\n",
-    "combined_st.to_csv('augmented_data/st_dataset.csv', header=False)\n",
+    "combined_st.to_csv('augmented_data/st_dataset.csv', header=False, index = False)\n",
     "\n",
     "# Free memory\n",
     "del class_column\n",
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
      "output_type": "stream",
      "text": [
       "Original data shape: (87554, 187)\n",
-      "X_train shape after signal transformation: (117720, 188)\n",
+      "X_train shape after signal transformation: (117720, 187)\n",
       "y_train shape after signal transformation:  (117720,)\n"
      ]
     }
@@ -916,14 +916,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_42844\\2164437427.py:7: FutureWarning: \n",
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_42624\\2164437427.py:7: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
        "Text(0.5, 1.0, 'Percentage of each class in resampled train data')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,43 +1122,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/30], Train Loss: 0.1872, Train Accuracy: 94.83%, Validation Loss: 0.1092, Validation Accuracy: 97.07%\n",
-      "Epoch [2/30], Train Loss: 0.1043, Train Accuracy: 97.17%, Validation Loss: 0.0860, Validation Accuracy: 97.64%\n",
-      "Epoch [3/30], Train Loss: 0.0835, Train Accuracy: 97.69%, Validation Loss: 0.0708, Validation Accuracy: 97.93%\n",
-      "Epoch [4/30], Train Loss: 0.0714, Train Accuracy: 98.00%, Validation Loss: 0.0667, Validation Accuracy: 98.15%\n",
-      "Epoch [5/30], Train Loss: 0.0623, Train Accuracy: 98.21%, Validation Loss: 0.0516, Validation Accuracy: 98.44%\n",
-      "Epoch [6/30], Train Loss: 0.0538, Train Accuracy: 98.42%, Validation Loss: 0.0481, Validation Accuracy: 98.52%\n",
-      "Epoch [7/30], Train Loss: 0.0470, Train Accuracy: 98.56%, Validation Loss: 0.0404, Validation Accuracy: 98.80%\n",
-      "Epoch [8/30], Train Loss: 0.0415, Train Accuracy: 98.74%, Validation Loss: 0.0310, Validation Accuracy: 99.09%\n",
-      "Epoch [9/30], Train Loss: 0.0366, Train Accuracy: 98.88%, Validation Loss: 0.0344, Validation Accuracy: 99.01%\n",
-      "Epoch [10/30], Train Loss: 0.0327, Train Accuracy: 99.01%, Validation Loss: 0.0305, Validation Accuracy: 99.04%\n",
-      "Epoch [11/30], Train Loss: 0.0293, Train Accuracy: 99.07%, Validation Loss: 0.0263, Validation Accuracy: 99.21%\n",
-      "Epoch [12/30], Train Loss: 0.0243, Train Accuracy: 99.25%, Validation Loss: 0.0225, Validation Accuracy: 99.28%\n",
-      "Epoch [13/30], Train Loss: 0.0221, Train Accuracy: 99.26%, Validation Loss: 0.0177, Validation Accuracy: 99.45%\n",
-      "Epoch [14/30], Train Loss: 0.0196, Train Accuracy: 99.37%, Validation Loss: 0.0136, Validation Accuracy: 99.56%\n",
-      "Epoch [15/30], Train Loss: 0.0155, Train Accuracy: 99.49%, Validation Loss: 0.0115, Validation Accuracy: 99.62%\n",
-      "Epoch [16/30], Train Loss: 0.0136, Train Accuracy: 99.54%, Validation Loss: 0.0096, Validation Accuracy: 99.69%\n",
-      "Epoch [17/30], Train Loss: 0.0118, Train Accuracy: 99.62%, Validation Loss: 0.0081, Validation Accuracy: 99.73%\n",
-      "Epoch [18/30], Train Loss: 0.0095, Train Accuracy: 99.66%, Validation Loss: 0.0065, Validation Accuracy: 99.79%\n",
-      "Epoch [19/30], Train Loss: 0.0077, Train Accuracy: 99.74%, Validation Loss: 0.0061, Validation Accuracy: 99.82%\n",
-      "Epoch [20/30], Train Loss: 0.0060, Train Accuracy: 99.80%, Validation Loss: 0.0035, Validation Accuracy: 99.89%\n",
-      "Epoch [21/30], Train Loss: 0.0049, Train Accuracy: 99.84%, Validation Loss: 0.0038, Validation Accuracy: 99.89%\n",
-      "Epoch [22/30], Train Loss: 0.0042, Train Accuracy: 99.86%, Validation Loss: 0.0030, Validation Accuracy: 99.92%\n",
-      "Epoch [23/30], Train Loss: 0.0033, Train Accuracy: 99.89%, Validation Loss: 0.0020, Validation Accuracy: 99.97%\n",
-      "Epoch [24/30], Train Loss: 0.0024, Train Accuracy: 99.93%, Validation Loss: 0.0021, Validation Accuracy: 99.94%\n",
-      "Epoch [25/30], Train Loss: 0.0019, Train Accuracy: 99.95%, Validation Loss: 0.0014, Validation Accuracy: 99.96%\n",
-      "Epoch [26/30], Train Loss: 0.0015, Train Accuracy: 99.96%, Validation Loss: 0.0011, Validation Accuracy: 99.97%\n",
-      "Epoch [27/30], Train Loss: 0.0011, Train Accuracy: 99.97%, Validation Loss: 0.0008, Validation Accuracy: 99.98%\n",
-      "Epoch [28/30], Train Loss: 0.0011, Train Accuracy: 99.97%, Validation Loss: 0.0008, Validation Accuracy: 99.99%\n",
-      "Epoch [29/30], Train Loss: 0.0009, Train Accuracy: 99.98%, Validation Loss: 0.0007, Validation Accuracy: 99.99%\n",
-      "Epoch [30/30], Train Loss: 0.0009, Train Accuracy: 99.98%, Validation Loss: 0.0007, Validation Accuracy: 99.99%\n"
+      "Epoch [1/30], Train Loss: 0.1859, Train Accuracy: 94.83%, Test Loss: 0.1088, Test Accuracy: 97.09%\n",
+      "Epoch [2/30], Train Loss: 0.1011, Train Accuracy: 97.21%, Test Loss: 0.0847, Test Accuracy: 97.66%\n",
+      "Epoch [3/30], Train Loss: 0.0833, Train Accuracy: 97.68%, Test Loss: 0.0672, Test Accuracy: 98.08%\n",
+      "Epoch [4/30], Train Loss: 0.0701, Train Accuracy: 98.02%, Test Loss: 0.0606, Test Accuracy: 98.28%\n",
+      "Epoch [5/30], Train Loss: 0.0624, Train Accuracy: 98.23%, Test Loss: 0.0501, Test Accuracy: 98.52%\n",
+      "Epoch [6/30], Train Loss: 0.0541, Train Accuracy: 98.42%, Test Loss: 0.0416, Test Accuracy: 98.79%\n",
+      "Epoch [7/30], Train Loss: 0.0473, Train Accuracy: 98.58%, Test Loss: 0.0423, Test Accuracy: 98.74%\n",
+      "Epoch [8/30], Train Loss: 0.0419, Train Accuracy: 98.74%, Test Loss: 0.0339, Test Accuracy: 98.98%\n",
+      "Epoch [9/30], Train Loss: 0.0371, Train Accuracy: 98.89%, Test Loss: 0.0410, Test Accuracy: 98.70%\n",
+      "Epoch [10/30], Train Loss: 0.0332, Train Accuracy: 98.96%, Test Loss: 0.0309, Test Accuracy: 99.03%\n",
+      "Epoch [11/30], Train Loss: 0.0297, Train Accuracy: 99.07%, Test Loss: 0.0226, Test Accuracy: 99.29%\n",
+      "Epoch [12/30], Train Loss: 0.0252, Train Accuracy: 99.17%, Test Loss: 0.0208, Test Accuracy: 99.35%\n",
+      "Epoch [13/30], Train Loss: 0.0216, Train Accuracy: 99.30%, Test Loss: 0.0192, Test Accuracy: 99.38%\n",
+      "Epoch [14/30], Train Loss: 0.0200, Train Accuracy: 99.34%, Test Loss: 0.0132, Test Accuracy: 99.60%\n",
+      "Epoch [15/30], Train Loss: 0.0164, Train Accuracy: 99.48%, Test Loss: 0.0127, Test Accuracy: 99.58%\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m cnn_gru_optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mAdam(cnn_gru_model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mLEARNING_RATE)\n\u001b[0;32m      3\u001b[0m scheduler \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mlr_scheduler\u001b[38;5;241m.\u001b[39mCosineAnnealingLR(cnn_gru_optimizer, T_max\u001b[38;5;241m=\u001b[39mEPOCHS)\n\u001b[1;32m----> 5\u001b[0m train_losses, train_accuracies, test_losses, test_accuracies \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_and_evaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcnn_gru_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcnn_gru_optimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDEVICE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEPOCHS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscheduler\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mscheduler\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m torch\u001b[38;5;241m.\u001b[39msave(cnn_gru_model\u001b[38;5;241m.\u001b[39mstate_dict(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./model/cnn_gru_original.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      8\u001b[0m metrics_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moriginal_cnn_gru\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m store_metrics(train_losses, train_accuracies, test_losses, test_accuracies)\n",
+      "File \u001b[1;32mc:\\Users\\randa\\OneDrive\\Documents\\GitHub\\Neural-Networks-Project\\common_utils.py:190\u001b[0m, in \u001b[0;36mtrain_and_evaluate\u001b[1;34m(model, optimizer, train_loader, val_loader, device, num_epochs, scheduler)\u001b[0m\n\u001b[0;32m    187\u001b[0m train_losses\u001b[38;5;241m.\u001b[39mappend(train_loss)\n\u001b[0;32m    188\u001b[0m train_accuracies\u001b[38;5;241m.\u001b[39mappend(train_acc)\n\u001b[1;32m--> 190\u001b[0m test_loss, test_acc \u001b[38;5;241m=\u001b[39m \u001b[43mevaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    191\u001b[0m test_losses\u001b[38;5;241m.\u001b[39mappend(test_loss)\n\u001b[0;32m    192\u001b[0m test_losses\u001b[38;5;241m.\u001b[39mappend(test_acc)\n",
+      "File \u001b[1;32mc:\\Users\\randa\\OneDrive\\Documents\\GitHub\\Neural-Networks-Project\\common_utils.py:171\u001b[0m, in \u001b[0;36mevaluate\u001b[1;34m(model, test_loader, device, criterion)\u001b[0m\n\u001b[0;32m    169\u001b[0m     \u001b[38;5;66;03m# Get predictions\u001b[39;00m\n\u001b[0;32m    170\u001b[0m     _, predicted \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmax(outputs, \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m--> 171\u001b[0m     correct \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43m(\u001b[49m\u001b[43mpredicted\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_batch\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msum\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mitem()\n\u001b[0;32m    173\u001b[0m \u001b[38;5;66;03m# Calculate average validation loss and accuracy\u001b[39;00m\n\u001b[0;32m    174\u001b[0m test_loss \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(test_loader\u001b[38;5;241m.\u001b[39mdataset)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -1209,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
